# easycond

./: CMakeLists.txt  README.md  config.h.in  easycond.h
cmake/: CXXFeatures.cmake
tests/: CMakeLists.txt  test.cpp
